--- a/Templates/base.html.twig
+++ b/Templates/base.html.twig
@@ -1,60 +1,71 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>
-			{% block title %}
-				Documents
-			{% endblock %}
-		</title>
-
-		{% block metaSocial %}{% endblock %}
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&family=Open+Sans:ital@0;1&family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
-
-		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>👩🏼‍💻</text></svg>">
-
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-
-
-		{# <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel = "stylesheet"> #}
-		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-			{% block stylesheets %}
-		
-		{% endblock %}
-
-	<link rel="stylesheet" href="{{asset('assets/styles/app.css')}}"> </head>
-	<body>
-		{% include ("/components/navigation.html.twig") %}
-		{% block body %}{% endblock %}
-
-		<header>
-			{% block header %}{% endblock %}
-		</header>
-
-
-		<main>
-			{% block main %}{% endblock %}
-		</main>
-
-		{% include ("/components/footer.html.twig") %}
-
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
-
-		<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"></script>
-		{% block javascripts %}
-			
-		{% endblock %}
-
-
-		{# <script src="{{asset('assets/js/app.js') }}"></script> #}
-
-
-	</body>
-
+<html lang="fr">
+<head>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>
+{% block title %}Welcome!
+{% endblock %}
+</title>
+{% block meta %}
+{# bloc destiné à recevoir les méta OG de construction de posts pour les
+réseaux sociaux et les méta twitter #}
+{% endblock %}
+<link
+rel="icon" href="data:image/svg+xml,<svg
+xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text
+y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+{# Run `composer require symfony/webpack-encore-bundle` to start using
+Symfony UX #}
+<link
+href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.cs
+s" rel="stylesheet"
+integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
+crossorigin="anonymous">
+{# import des icons image google home cliquer sur l'icon puis instruction
+#}
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+rel="stylesheet">
+{# import des icons Font awesome #}
+<link rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB4
+6ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+{% block stylesheets %}
+{{ encore_entry_link_tags('app') }}
+{% endblock %}
+{# import du css perso la methode asset permet de generér le lien
+automatiquement avec twig#}
+<link rel="stylesheet" href="{{ asset('assets/css/app.css') }}">
+</head>
+{% block bodyId %}
+{% endblock %}
+{% block navbar %}
+{% include "./components/navigation.html.twig" %}
+{% endblock %}
+{# {% include mettre le lien pour inclure la nav bar %} #}
+<header>
+{% block header %}{% endblock %}
+</header>
+<main>
+{% block body %}{% endblock %}
+</main>
+{% block bottomReassurance %}{% endblock %}
+{% include "./components/footer.html.twig" %}
+{# {% include mettre le lien pour inclure le footer %} #}
+{# script bootstrap #}<script
+src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.m
+in.js"
+integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+crossorigin="anonymous"> </script>
+{# script jsquery #}
+<script
+src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"></script>
+{% block javascripts %}
+{{ encore_entry_script_tags('app') }}
+{% endblock %}
+{# Js perso import grace à js #}
+<script src="{{ asset('assets/js/app.js') }}"></script>
+</body>
 </html>
