--- a/Templates/components/navigation.html.twig
+++ b/Templates/components/navigation.html.twig
@@ -1,12 +1,13 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="{{ path('app_home') }}">
-    <img src="{{ asset('assets/img/icon/logo.png') }}" class="top-logo">
+    <img src="{{ asset('assets/img/icon/logo3.png') }}" class="top-logo">
     </a>
     
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+    {% if is_granted('ROLE_USER') %}
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li><a class="nav-link" aria-current="page" href="#">Homme</a>
@@ -16,9 +17,7 @@
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="#">Acceuil</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ path('app_login') }}">Se connecter</a>
-        </li>
+        
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Menu
@@ -30,14 +29,48 @@
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
+        </li>
+        </ul>
+        </div>
+        {% else %}
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li><a class="nav-link" aria-current="page" href="#">Homme</a>
+        </li>
+        <li><a class="nav-link" aria-current="page" href="#">Femme</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="#">Acceuil</a>
+        </li>
+        
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Menu
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="{{ path('app_affichage') }}">Produits</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ path('app_login') }}">Se connecter</a>
+        </li>
+        </ul>
+        </div>
+        {% endif %} 
+
         {#<li class="nav-item">
           <a class="nav-link disabled" aria-disabled="true">Disabled</a>
         </li>#}
-      </ul>
+      
       {# <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form> #}
-    </div>
+    
   </div>
 </nav>
