--- a/Templates/components/navigation.html.twig
+++ b/Templates/components/navigation.html.twig
@@ -7,7 +7,35 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    {% if is_granted('ROLE_USER') %}
+    {% if is_granted('ROLE_ADMIN') %}
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li><a class="nav-link" aria-current="page" href="#">Homme</a>
+        </li>
+        <li><a class="nav-link" aria-current="page" href="#">Femme</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="#">Acceuil</a>
+        </li>
+        
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Gestion
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="{{ path('app_affichage') }}">Produits</a></li>
+            <li><a class="dropdown-item" href="{{ path('app_produits') }}">Ajout produits</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
+        </li>
+        </ul>
+        </div>
+
+    {% elseif is_granted('ROLE_USER') %}
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li><a class="nav-link" aria-current="page" href="#">Homme</a>
