mise a jour du projet

--- a/Templates/components/footer.html.twig
+++ b/Templates/components/footer.html.twig
@@ -1,12 +1,15 @@
 <footer>
             <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
             <ul class="list-inline">
-                <li class="list-inline-item"><a href="#">Home</a></li>
                 <li class="list-inline-item"><a href="#">FAQ</a></li>
-                <li class="list-inline-item"><a href="#">Services</a></li>
-                <li class="list-inline-item"><a href="#">About</a></li>
-                <li class="list-inline-item"><a href="#">Terms</a></li>
-                <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+                <li class="list-inline-item"><a href="#">Mode de livraison</a></li>
+                <li class="list-inline-item"><a href="#">Moyens de paiement</a></li>
+                <li class="list-inline-item"><a href="#">Aide et Contact</a></li>
+                <li class="list-inline-item"><a href="#">Réseaux sociaux</a></li>
+                <li class="list-inline-item"><a href="#">Blog</a></li>
+                <li class="list-inline-item"><a href="#">CGV</a></li>
+                <li class="list-inline-item"><a href="#">CGU</a></li>
+                <li class="list-inline-item"><a href="#">Charte de confidentialité</a></li>
             </ul>
             <p class="copyright">Mode Try © 2024</p>
         </footer>
