--- a/Templates/produits/affichage.html.twig
+++ b/Templates/produits/affichage.html.twig
@@ -17,7 +17,7 @@
                         <p class="card-text">{{ produit.couleur }}</p>
                         <p class="card-text">{{ produit.description }}</p>
                         <div class="d-flex justify-content-between align-item-center">
-                            <a href="#" class="btn btn-dark">Panier</a>
+                            <a href="{{ path('app_ajout_panier',{'produitId': produit.id }) }}" class="btn btn-dark">Panier</a>
                             <span class="h5 mt-auto">{{ produit.prix }} €</span>
                             {% if produit.stock > 1 %}
                              <p>disponible</p> 
