--- a/Templates/mon_compte/index.html.twig
+++ b/Templates/mon_compte/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MonCompteController!{% endblock %}
+{% block title %}Hello Mon Compte{% endblock %}
 
 {% block body %}
 <style>
