--- a/Templates/produits/index.html.twig
+++ b/Templates/produits/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ProduitsController!{% endblock %}
+{% block title %}Ajout Produits{% endblock %}
 
 {% block body %}
 <style>
