--- a/assets/app.css
+++ b/assets/app.css
@@ -2,4 +2,4 @@
 @import url(./styles/global.css);
 @import url(./styles/navigation.css);
 @import url(./styles/produits.css);
-
+@import url(./styles/mode.css);
