--- a/Templates/components/footer.html.twig
+++ b/Templates/components/footer.html.twig
@@ -1,15 +1,32 @@
-<footer>
-            <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
-            <ul class="list-inline">
-                <li class="list-inline-item"><a href="#">FAQ</a></li>
-                <li class="list-inline-item"><a href="#">Mode de livraison</a></li>
-                <li class="list-inline-item"><a href="#">Moyens de paiement</a></li>
-                <li class="list-inline-item"><a href="#">Aide et Contact</a></li>
-                <li class="list-inline-item"><a href="#">Réseaux sociaux</a></li>
-                <li class="list-inline-item"><a href="#">Blog</a></li>
-                <li class="list-inline-item"><a href="#">CGV</a></li>
-                <li class="list-inline-item"><a href="#">CGU</a></li>
-                <li class="list-inline-item"><a href="#">Charte de confidentialité</a></li>
-            </ul>
-            <p class="copyright">Mode Try © 2024</p>
-        </footer>
+ <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="social">
+                        <a href="#"><i class="icon ion-social-instagram"></i></a>
+                        <a href="#"><i class="icon ion-social-snapchat"></i></a>
+                        <a href="#"><i class="icon ion-social-twitter"></i></a>
+                        <a href="#"><i class="icon ion-social-facebook"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-8 mx-auto" >
+                    <ul class="footer-links text-center">
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Mode de livraison</a></li>
+                        <li><a href="#">Moyens de paiement</a></li>
+                        <li><a href="{{ path('app_contact') }}">Aide et Contact</a></li>
+                        <li><a href="#">Réseaux sociaux</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">CGV</a></li>
+                        <li><a href="#">CGU</a></li>
+                        <li><a href="#">Charte de confidentialité</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <p class="copyright text-center">Mode Try © 2024</p>
+                </div>
+            </div>
+        </div>
+    </footer>
