--- a/Templates/produits/affichage.html.twig
+++ b/Templates/produits/affichage.html.twig
@@ -3,6 +3,12 @@
 {% block title %}Produits{% endblock %}
 
 {% block body %}
+{% for flashMessage in app.flashes('error') %}
+<div class='alert alert-danger'>
+{{ flashMessage }}
+</div>
+    
+{% endfor %}
 <div class="container">
     <h1 class="mt-3 mb-4">Vêtements</h1>
     <div class="row">
@@ -13,8 +19,8 @@
                     <img src="{{ asset(produit.image) }}" alt="{{ produit.nom }}" class="card-img-top"> 
                     <div class="card-body">
                         <h5 class="card-title">{{ produit.nom }}</h5>
-                        <select name="" id="">
-                        <option value="">Choix Tailles</option>
+                        <select name="" id="" required>
+                        <option value="" disabled selected hidden>Choix Tailles</option>
                         {% for taille in produit.tailles %}
                         <option value="{{ taille.mesures }}">{{ taille.mesures }}</option>
                         {% endfor %}
