--- a/Templates/home/index.html.twig
+++ b/Templates/home/index.html.twig
@@ -37,7 +37,10 @@
 			<img src="{{ asset('assets/img/photos/men.webp') }}" class="men">
 		</div>
 		<div class="col mt-5">
-			<img src="{{ asset('assets/img/photos/jean.jpg') }}" class="jean">
+			<img src="{{ asset('assets/img/photos/bascket.webp') }}" class="jean">
+		</div>
+		<div class="col mt-5">
+			<img src="{{ asset('assets/img/photos/escarpin noir.webp') }}" class="jean">
 		</div>
 	</div>
 </div>{% endblock %}
