--- a/Templates/panier/index.html.twig
+++ b/Templates/panier/index.html.twig
@@ -1,33 +1,46 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello PanierController!{% endblock %}
+{% block title %}Votre Panier{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
+    <h1>Votre Panier</h1>
     {% if panier is empty %}
-    <p>
-    Panier vide
-    </p>
+        <p>Votre panier est vide.</p>
     {% else %}
-        {% for produit in panier %}
-        {{ produit.nom }}
-        {{ produit.taille }}
-        {{ produit.couleur }}
-        <img src="{{ asset(produit.image) }}" alt="{{ produit.nom }}" style="width: 25%">
-        {{ produit.prix }}
-        {{ produit.quantite }}
-        {{ produit.quantite * produit.prix }}
-        <a href='{{ path('app_suppression_panier', {'produitId': produit.id }) }}' class='btn btn-danger'>supprimer
-        <a/>
-            
-        {% endfor %}
-        {% endif %}
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>image</th>
+                    <th>Produit</th>
+                    <th>Prix</th>
+                    <th>Quantité</th>
+                    <th>Total</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for produit in panier %}
+                    <tr>
+                     {# <td><img src="{{ asset(produit.image) }}" alt="{{ produit.nom }}" style="width: 5%"></td> #}
+                        <td>{{ produit.nom }}</td>
+                        <td>{{ produit.prix }} €</td>
+                        <td>{{ produit.quantite }}</td>
+                        <td>{{ produit.prix * produit.quantite }} €</td>
+                        <td>
+                            <a href="{{ path('app_suppression_panier', {'produitId': produit.id }) }}" class="btn btn-danger">Supprimer</a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
 
-   
+        <div class="text-right">
+            <p>Total du panier : {{ total }} €</p>
+            <a href="{{ path('app_stripe') }}" class="btn btn-success">Passer au paiement</a>
+
+        </div>
+    {% endif %}
 </div>
 {% endblock %}
+
+
+
