--- a/Templates/home/index.html.twig
+++ b/Templates/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Acceuil!
+{% block title %}Accueil!
 {% endblock %}
 
 {% block body %}
@@ -22,10 +22,10 @@
 			{{ controller_name }}
 		</h1>
 		{# {{dump(app.user.pseudo)}} 
-		    This friendly message is coming from:
-		    <ul>
-		       {# <li>Your controller at <code><a href="{{ '/Users/manybou/Desktop/ModeFyt/ModeTry/ModeTry/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-		        <li>Your template at <code><a href="{{ '/Users/manybou/Desktop/ModeFyt/ModeTry/ModeTry/Templates/home/index.html.twig'|file_link(0) }}">Templates/home/index.html.twig</a></code></li>#}
+				    This friendly message is coming from:
+				    <ul>
+				       {# <li>Your controller at <code><a href="{{ '/Users/manybou/Desktop/ModeFyt/ModeTry/ModeTry/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
+				        <li>Your template at <code><a href="{{ '/Users/manybou/Desktop/ModeFyt/ModeTry/ModeTry/Templates/home/index.html.twig'|file_link(0) }}">Templates/home/index.html.twig</a></code></li>#}
 	</ul>
 </div>
 <div class="container">
