--- a/Templates/components/navigation.html.twig
+++ b/Templates/components/navigation.html.twig
@@ -1,110 +1,136 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="{{ path('app_home') }}">
-    <img src="{{ asset('assets/img/icon/logo_3.png') }}" class="top-logo">
-    </a>
+	<div class="container-fluid">
+		<a class="navbar-brand" href="{{ path('app_home') }}">
+			<img src="{{ asset('assets/img/icon/logo_3.png') }}" class="top-logo">
+		</a>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="barnav">
-  
-    {% if is_granted('ROLE_ADMIN') %}
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li><a class="nav-link" aria-current="page" href="#">Homme</a>
-        </li>
-        <li><a class="nav-link" aria-current="page" href="#">Femme</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="{{ path('app_home') }}">Acceuil</a>
-        </li>
-        
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Gestion
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="{{ path('app_affichage') }}">Produits</a></li>
-            <li><a class="dropdown-item" href="{{ path('app_produits') }}">Ajout produits</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-          <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="{{ path('app_mon_compte') }}"><i class="fa-solid fa-user"></i></a>
-        </li>
-        
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
-        </li>
-        </ul>
-        </div>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="barnav">
 
-    {% elseif is_granted('ROLE_USER') %}
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li><a class="nav-link" aria-current="page" href="#">Homme</a>
-        </li>
-        <li><a class="nav-link" aria-current="page" href="#">Femme</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Acceuil</a>
-        </li>
-        
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Menu
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="{{ path('app_affichage') }}">Produits</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
-        </li>
-        </ul>
-        </div>
-        {% else %}
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li><a class="nav-link" aria-current="page" href="#">Homme</a>
-        </li>
-        <li><a class="nav-link" aria-current="page" href="#">Femme</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="{{ path('app_home') }}">Acceuil</a>
-        </li>
-        
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Menu
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="{{ path('app_affichage') }}">Produits</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ path('app_login') }}">Se connecter</a>
-        </li>
-        </ul>
-        </div>
-        {% endif %} 
+			{% if is_granted('ROLE_ADMIN') %}
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li>
+							<a class="nav-link" aria-current="page" href="#">Homme</a>
+						</li>
+						<li>
+							<a class="nav-link" aria-current="page" href="#">Femme</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" aria-current="page" href="{{ path('app_home') }}">Accueil</a>
+						</li>
 
-        {#<li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li>#}
-      
-      {# <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form> #}
-      </div>
-  </div>
-</nav>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+								Gestion
+							</a>
+							<ul class="dropdown-menu">
+								<li>
+									<a class="dropdown-item" href="{{ path('app_affichage') }}">Produits</a>
+								</li>
+								<li>
+									<a class="dropdown-item" href="{{ path('app_produits') }}">Ajout produits</a>
+								</li>
+								<li><hr class="dropdown-divider"></li>
+								<li>
+									<a class="dropdown-item" href="#">Something else here</a>
+								</li>
+							</ul>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" aria-current="page" href="{{ path('app_mon_compte') }}">
+								<i class="fa-solid fa-user"></i>
+							</a>
+						</li>
+
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
+					</li>
+				</ul>
+			</div>
+
+		{% elseif is_granted('ROLE_USER') %}
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li>
+						<a class="nav-link" aria-current="page" href="#">Homme</a>
+					</li>
+					<li>
+						<a class="nav-link" aria-current="page" href="#">Femme</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" aria-current="page" href="#">Accueil</a>
+					</li>
+
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Menu
+						</a>
+						<ul class="dropdown-menu">
+							<li>
+								<a class="dropdown-item" href="{{ path('app_affichage') }}">Produits</a>
+							</li>
+							<li>
+								<a class="dropdown-item" href="#">Another action</a>
+							</li>
+							<li><hr class="dropdown-divider"></li>
+							<li>
+								<a class="dropdown-item" href="#">Something else here</a>
+							</li>
+						</ul>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
+					</li>
+				</ul>
+			</div>
+		{% else %}
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li>
+						<a class="nav-link" aria-current="page" href="#">Homme</a>
+					</li>
+					<li>
+						<a class="nav-link" aria-current="page" href="#">Femme</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" aria-current="page" href="{{ path('app_home') }}">Accueil</a>
+					</li>
+
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Menu
+						</a>
+						<ul class="dropdown-menu">
+							<li>
+								<a class="dropdown-item" href="{{ path('app_affichage') }}">Produits</a>
+							</li>
+							<li>
+								<a class="dropdown-item" href="#">Another action</a>
+							</li>
+							<li><hr class="dropdown-divider"></li>
+							<li>
+								<a class="dropdown-item" href="#">Something else here</a>
+							</li>
+						</ul>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('app_login') }}">Se connecter</a>
+					</li>
+				</ul>
+			</div>
+		{% endif %}
+
+		{#<li class="nav-item">
+		          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+		        </li>#}
+
+		{# <form class="d-flex" role="search">
+		        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+		        <button class="btn btn-outline-success" type="submit">Search</button>
+		      </form> #}
+	</div>
+</div></nav>
