--- a/Templates/produits/detailsProduits.html.twig
+++ b/Templates/produits/detailsProduits.html.twig
@@ -1,62 +1,63 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Produits{% endblock %}
-
-{% block body %}
-<div class="container">
-    <h1 class="mt-3 mb-4">Vêtements</h1>
-    <div class="row">
-    
-
-<div class="col-md-4">
-                <div class="card mb-4">
-                    <img src="{{ asset(produit.image) }}" alt="{{ produit.nom }}" class="card-img-top"> 
-                    <div class="card-body">
-                        <h5 class="card-title">{{ produit.nom }}</h5>
-                        <p class="card-text">{{ produit.taille }}</p>
-                        <p class="card-text">{{ produit.couleur }}</p>
-                        <p class="card-text">{{ produit.description }}</p>
-                        <div class="d-flex justify-content-between align-item-center">
-                            <a href="{{ path('app_ajout_panier',{'produitId': produit.id }) }}" class="btn btn-dark">Panier</a>
-                            <span class="h5 mt-auto">{{ produit.prix }} €</span>
-                            {% if produit.stock > 1 %}
-                             <p>disponible</p> 
-                            {% else %}
-                            <p>Pas disponible</p>
-                            {% endif %}
-                        </div>
-                        
-                    </div>
-                </div>
-            </div>
-            
-        
-        
-    </div>
-</div> 
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-5 col-md-6 col-12 pb-4">
-            {% for commentaire in commentaire %}
-                <h1>Commentaire</h1>
-                <div class="comment mt-4 text-justify float-left">
-                    
-                    {# <h4>{{ commentaire.user_id }}</h4> #}
-                    <span>{{ commentaire.DatePublication|date('d-m-Y') }}</span>
-                    <br>
-                    <p>{{ commentaire.commentaire }}</p>
-                </div>
-               {% endfor %}
-             </div>
-        </div>
-     </div>
-
-<div class="example-wrapper">
-    <h1>Produits</h1>
-    {{ form_start(form) }}
-    {{ form_end(form) }}
-
-  
-</div>
+{% block title %}Produits
 {% endblock %}
 
+{% block body %}
+	<div class="container">
+		<h1 class="mt-3 mb-4">Vêtements</h1>
+		<div class="row">
+
+
+			<div class="col-md-4">
+				<div class="card mb-4">
+					<img src="{{ asset(produit.image) }}" alt="{{ produit.nom }}" class="card-img-top">
+					<div class="card-body">
+						<h5 class="card-title">{{ produit.nom }}</h5>
+						<p class="card-text">{{ produit.tailles }}</p>
+						<p class="card-text">{{ produit.couleur }}</p>
+						<p class="card-text">{{ produit.description }}</p>
+						<div class="d-flex justify-content-between align-item-center">
+							<a href="{{ path('app_ajout_panier',{'produitId': produit.id }) }}" class="btn btn-dark">Panier</a>
+							<span class="h5 mt-auto">{{ produit.prix }}
+								€</span>
+							{% if produit.stock > 1 %}
+								<p>disponible</p>
+							{% else %}
+								<p>Pas disponible</p>
+							{% endif %}
+						</div>
+
+					</div>
+				</div>
+			</div>
+
+
+		</div>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-5 col-md-6 col-12 pb-4">
+				{% for commentaire in commentaire %}
+					<h1>Commentaire</h1>
+					<div
+						class="comment mt-4 text-justify float-left">
+
+						{# <h4>{{ commentaire.user_id }}</h4> #}
+						<span>{{ commentaire.DatePublication|date('d-m-Y') }}</span>
+						<br>
+						<p>{{ commentaire.commentaire }}</p>
+					</div>
+				{% endfor %}
+			</div>
+		</div>
+	</div>
+
+	<div class="example-wrapper">
+		<h1>Produits</h1>
+		{{ form_start(form) }}
+		{{ form_end(form) }}
+
+
+	</div>
+{% endblock %}
