--- a/Templates/components/footer.html.twig
+++ b/Templates/components/footer.html.twig
@@ -2,15 +2,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="social">
-                        <a href="#"><i class="icon ion-social-instagram"></i></a>
-                        <a href="#"><i class="icon ion-social-snapchat"></i></a>
-                        <a href="#"><i class="icon ion-social-twitter"></i></a>
-                        <a href="#"><i class="icon ion-social-facebook"></i></a>
+                    <div class="social text-center">
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+                        <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+                        <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
                     </div>
                 </div>
-                <div class="col-md-8 mx-auto" >
-                    <ul class="footer-links text-center">
+                <div class="col-md-12 mx-auto" >
+                    <ul class="footer-links text-center flex-nowrap">
                         <li><a href="#">FAQ</a></li>
                         <li><a href="#">Mode de livraison</a></li>
                         <li><a href="#">Moyens de paiement</a></li>
