--- a/Templates/base.html.twig
+++ b/Templates/base.html.twig
@@ -28,8 +28,10 @@ crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 rel="stylesheet">
 {# import des icons Font awesome #}
-<link rel="stylesheet"
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700,700i&display=swap">
+<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 {% block stylesheets %}
 {{ encore_entry_link_tags('app') }}
 {% endblock %}
@@ -46,6 +48,9 @@ automatiquement avec twig#}
 <header>
 {% block header %}{% endblock %}
 </header>
+<body>
+    
+
 <main>
 {% block body %}{% endblock %}
 </main>
