--- a/Templates/components/navigation.html.twig
+++ b/Templates/components/navigation.html.twig
@@ -16,7 +16,7 @@
 							<a class="nav-link" aria-current="page" href="#">Homme</a>
 						</li>
 						<li>
-							<a class="nav-link" aria-current="page" href="#">Femme</a>
+							<a class="nav-link" aria-current="page" href="{{ path('app_produit_femme') }}">Femme</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" aria-current="page" href="{{ path('app_home') }}">Accueil</a>
@@ -59,10 +59,10 @@
 						<a class="nav-link" aria-current="page" href="#">Homme</a>
 					</li>
 					<li>
-						<a class="nav-link" aria-current="page" href="#">Femme</a>
+						<a class="nav-link" aria-current="page" href="{{ path('app_produit_femme') }}">Femme</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" aria-current="page" href="#">Accueil</a>
+						<a class="nav-link" aria-current="page" href="{{ path('app_home') }}">Accueil</a>
 					</li>
 
 					<li class="nav-item dropdown">
@@ -82,6 +82,10 @@
 							</li>
 						</ul>
 					</li>
+					<li class='nav-item'>
+					<a class='nav-link' href="{{ path('app_mon_compte') }}">
+					<i class="fa-solid fa-user fa-1x"></i></a>
+					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
 					</li>
@@ -94,7 +98,7 @@
 						<a class="nav-link" aria-current="page" href="#">Homme</a>
 					</li>
 					<li>
-						<a class="nav-link" aria-current="page" href="#">Femme</a>
+						<a class="nav-link" aria-current="page" href="{{ path('app_produit_femme') }}">Femme</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" aria-current="page" href="{{ path('app_home') }}">Accueil</a>
