--- a/Templates/registration/register.html.twig
+++ b/Templates/registration/register.html.twig
@@ -6,20 +6,22 @@
     {% for flash_error in app.flashes('verify_email_error') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
-
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 offset-sm-3">
     <h1>Register</h1>
 
     {{ form_errors(registrationForm) }}
 
-    {{ form_start(registrationForm) }}
-    {{ form_row(registrationForm.nom) }}
-    {{ form_row(registrationForm.prenom) }}
-    {{ form_row(registrationForm.pseudo) }}
-    {{ form_row(registrationForm.adresse) }}
-    {{ form_row(registrationForm.code_postal) }}
-    {{ form_row(registrationForm.ville) }}
-    {{ form_row(registrationForm.dateNaissance) }}
-    {{ form_row(registrationForm.telephone) }}
+        {{ form_start(registrationForm) }}
+        {{ form_row(registrationForm.nom) }}
+        {{ form_row(registrationForm.prenom) }}
+        {{ form_row(registrationForm.pseudo) }}
+        {{ form_row(registrationForm.adresse) }}
+        {{ form_row(registrationForm.code_postal) }}
+        {{ form_row(registrationForm.ville) }}
+        {{ form_row(registrationForm.dateNaissance) }}
+        {{ form_row(registrationForm.telephone) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
@@ -28,4 +30,8 @@
 
         <button type="submit" class="btn">Créer un compte</button>
     {{ form_end(registrationForm) }}
+   			</div>
+
+		</div>
+	</div>
 {% endblock %}
