--- a/assets/styles/footer.css
+++ b/assets/styles/footer.css
@@ -1,7 +1,10 @@
 footer {
     background-color: #343a40;
     color: #ffffff;
-    padding: 20px 0;
+    padding: 10px 0;
+    position:fixed;
+    width: 100%;
+    bottom: 0;
 }
 
 .social a {
