--- a/assets/styles/mode.css
+++ b/assets/styles/mode.css
@@ -1,9 +1,5 @@
 body,
-html {
-  margin: 0;
-  padding: 0;
-  
-}
+
 * {
   touch-action: manipulation;
 }
@@ -15,10 +11,13 @@ html {
 body {
   position: relative;
   letter-spacing: 2px;
-  font-size: 11px;
-  font-family: 'Poppins', sans-serif;
+  font-size: 1.2em;
+  font-family: 'Roboto', sans-serif; 
   width: 100%;
   height: 100vh;
+}
+h1{
+  font-family: 'Montserrat', sans-serif !important;
 }
 .wrapper {
   display: flex;
