--- a/Templates/components/footer.html.twig
+++ b/Templates/components/footer.html.twig
@@ -1,33 +1,57 @@
- <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="social text-center">
-                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="#"><i class="fa-brands fa-tiktok"></i></a>
-                        <a href="#"><i class="fa-brands fa-pinterest"></i></a>
-                        <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                    </div>
-                </div>
-                <div class="col-md-12 mx-auto" >
-                    <ul class="footer-links text-center flex-nowrap">
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Mode de livraison</a></li>
-                        <li><a href="#">Moyens de paiement</a></li>
-                        <li><a href="{{ path('app_contact') }}">Aide et Contact</a></li>
-                        <li><a href="#">Réseaux sociaux</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">CGV</a></li>
-                        <li><a href="#">CGU</a></li>
-                        <li><a href="#">Charte de confidentialité</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <p class="copyright text-center">Mode Try © 2024</p>
-                </div>
-            </div>
-        </div>
-    </footer>
+<footer>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 pb-2">
+				<div class="social text-center">
+					<a href="#">
+						<i class="fa-brands fa-instagram"></i>
+					</a>
+					<a href="#">
+						<i class="fa-brands fa-tiktok"></i>
+					</a>
+					<a href="#">
+						<i class="fa-brands fa-pinterest"></i>
+					</a>
+					<a href="#">
+						<i class="fa-brands fa-x-twitter"></i>
+					</a>
+					<a href="#">
+						<i class="fa-brands fa-facebook"></i>
+					</a>
+				</div>
+			</div>
+			<div class="col-md-12 mx-auto">
+				<ul class="footer-links text-center flex-nowrap">
+					<li>
+						<a href="#">FAQ</a>
+					</li>
+					<li>
+						<a href="#">Mode de livraison</a>
+					</li>
+					<li>
+						<a href="#">Moyens de paiement</a>
+					</li>
+					<li>
+						<a href="{{ path('app_contact') }}">Aide et Contact</a>
+					</li>
+					<li>
+						<a href="#">Réseaux sociaux</a>
+					</li>
+					<li>
+						<a href="#">Blog</a>
+					</li>
+				</ul>
+				<ul class="footer-links text-center flex-nowrap">
+					<li><a href="#">CGV</a></li>
+					<li><a href="#">CGU</a></li>
+					<li><a href="#">Charte de confidentialité</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-12">
+				<p class="copyright text-center">Mode Try © 2024</p>
+			</div>
+		</div>
+	</div>
+</footer>
