--- a/Templates/produits/femme.html.twig
+++ b/Templates/produits/femme.html.twig
@@ -1,66 +1,76 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Produits{% endblock %}
-
-{% block body %}
-{% for flashMessage in app.flashes('error') %}
-<div class='alert alert-danger'>
-{{ flashMessage }}
-</div>
-    
-{% endfor %}
-<div class="container">
-    <h1 class="mt-3 mb-4">Vêtements</h1>
-    <div class="row">
-    {% for produit in produitFemme %}
-
-<div class="col-md-4">
-                <div class="card mb-4">
-                    <img src="{{ asset(produit.image) }}" alt="{{ produit.nom }}" class="card-img-top"> 
-                    <div class="card-body">
-                        <h5 class="card-title">{{ produit.nom }}</h5>
-                        {# <select name="taille"  required>
-                        <option value="" disabled selected hidden>Choix Tailles</option>
-                        {% for taille in produit.tailles %}
-                        <option id="taille" value="{{ taille.mesures }}">{{ taille.mesures }}</option>
-                        {% endfor %}
-                        </select> #}
-                            <form method="post" action="{{ path('app_ajout_panier', {'produitId': produit.id }) }}">
-            <select name="taille" required>
-                <option value="" disabled selected hidden>Choix Tailles</option>
-                {% for taille in produit.tailles %}
-                    <option value="{{ taille.mesures }}">{{ taille.mesures }}</option>
-                {% endfor %}
-            </select>
-            <button type="submit" class="btn btn-dark btn-hover btn-active">Ajouter au panier</button>
-        </form>
-                        <p class="card-text">{{ produit.couleur }}</p>
-                        <p class="card-text">{{ produit.description }}</p>
-                        <div class="d-flex justify-content-between align-item-center">
-                            <a href="{{ path('app_avis_produits',{'id': produit.id }) }}" class="btn btn-dark btn-hover">Voir plus</a>
-                            <span class="h5 mt-auto">{{ produit.prix }} €</span>
-                            {% if produit.stock > 1 %}
-                             <p>disponible</p> 
-                            {% else %}
-                            <p>Pas disponible</p>
-                            {% endif %}
-                        </div>
-                        {% if is_granted('ROLE_ADMIN') %}
-                <a href="{{ path('app_modification', {'id': produit.id }) }}">
-			<button type="submit" class="btn btn-primary mt-2"><i class="fa-solid fa-pen" aria-hidden="true"></i></button>
-		        </a>
-             <a href="{{ path('app_produits_supprime', {'id': produit.id }) }}?token={{ csrf_token('suppression') }}">
-			<button type="submit" class="btn btn-danger mt-2"><i class="fa-solid fa-trash" aria-hidden="true"></i></button>
-		        </a>    
-        {% endif %}  
-                    </div>
-                </div>
-            </div>
-            
-        {% endfor %}
-        
-    </div>
-</div>   
-
+{% block title %}Produits
 {% endblock %}
 
+{% block body %}
+    {% include "./components/navigationFemme.html.twig" %} 
+	{% for flashMessage in app.flashes('error') %}
+		<div class='alert alert-danger'>
+			{{ flashMessage }}
+		</div>
+
+	{% endfor %}
+	<div class="container">
+		<h1 class="mt-3 mb-4">{{ nomCategorie }} femme</h1>
+		<div class="row">
+			{% for produit in produitFemme %}
+
+				<div class="col-md-4 d-flex align-items-stretch">
+					<div class="card mb-4">
+						<img src="{{ asset(produit.image) }}" alt="{{ produit.nom }}" class="card-img-top">
+						<div class="card-body">
+							<h5 class="card-title">{{ produit.nom }}</h5>
+							{# <select name="taille"  required>
+																																			                        <option value="" disabled selected hidden>Choix Tailles</option>
+																																			                        {% for taille in produit.tailles %}
+																																			                        <option id="taille" value="{{ taille.mesures }}">{{ taille.mesures }}</option>
+																																			                        {% endfor %}
+																																			                        </select> #}
+							<form method="post" action="{{ path('app_ajout_panier', {'produitId': produit.id }) }}">
+								<select name="taille" required>
+									<option value="" disabled selected hidden>Choix Tailles</option>
+									{% for taille in produit.tailles %}
+										<option value="{{ taille.mesures }}">{{ taille.mesures }}</option>
+									{% endfor %}
+								</select>
+								<button type="submit" class="btn btn-dark light btn-hover btn-active">Ajouter au panier</button>
+							</form>
+							<p class="card-text">{{ produit.couleur }}</p>
+							<p class="card-text">{{ produit.description }}</p>
+
+						</div>
+						<div class="card-footer card-footer-align">
+
+							<div class="d-flex justify-content-between align-item-center">
+								<a href="{{ path('app_avis_produits',{'id': produit.id }) }}" class="btn btn-dark btn-hover">Voir plus</a>
+								<span>{{ produit.prix }}
+									€</span>
+								{% if produit.stock > 1 %}
+									<p>disponible</p>
+								{% else %}
+									<p>Pas disponible</p>
+								{% endif %}
+							</div>
+						</div>
+						{% if is_granted('ROLE_ADMIN') %}
+							<a href="{{ path('app_modification', {'id': produit.id }) }}">
+								<button type="submit" class="btn btn-dark light btn-hover mt-2">
+									<i class="fa-solid fa-pen" aria-hidden="true"></i>
+								</button>
+							</a>
+							<a href="{{ path('app_produits_supprime', {'id': produit.id }) }}?token={{ csrf_token('suppression') }}">
+								<button type="submit" class="btn btn-danger mt-2">
+									<i class="fa-solid fa-trash" aria-hidden="true"></i>
+								</button>
+							</a>
+						{% endif %}
+					</div>
+				</div>
+
+			{% endfor %}
+
+		</div>
+	</div>
+
+{% endblock %}
