--- a/Templates/components/navigation.html.twig
+++ b/Templates/components/navigation.html.twig
@@ -12,16 +12,19 @@
 			{% if is_granted('ROLE_ADMIN') %}
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item">
+							<a class="nav-link" aria-current="page" href="{{ path('app_home') }}">Accueil</a>
+						</li>
 						<li>
-							<a class="nav-link" aria-current="page" href="#">Homme</a>
+							<a class="nav-link" aria-current="page" href="{{ path('app_produit_homme') }}">Homme</a>
 						</li>
 						<li>
 							<a class="nav-link" aria-current="page" href="{{ path('app_produit_femme') }}">Femme</a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link" aria-current="page" href="{{ path('app_home') }}">Accueil</a>
+						<li>
+							<a class="nav-link" aria-current="page" href"#">Essai Virtuel</a>
 						</li>
-
+						
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 								Gestion
@@ -33,10 +36,11 @@
 								<li>
 									<a class="dropdown-item" href="{{ path('app_produits') }}">Ajout produits</a>
 								</li>
-								<li><hr class="dropdown-divider"></li>
 								<li>
-									<a class="dropdown-item" href="#">Something else here</a>
+									<a class="dropdown-item" href="{{ path('app_categorie') }}">Ajout categories</a>
 								</li>
+								<li><hr class="dropdown-divider"></li>
+								
 							</ul>
 						</li>
 						<li class="nav-item">
@@ -55,15 +59,18 @@
 		{% elseif is_granted('ROLE_USER') %}
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+						<a class="nav-link" aria-current="page" href="{{ path('app_home') }}">Accueil</a>
+					</li>
 					<li>
-						<a class="nav-link" aria-current="page" href="#">Homme</a>
+						<a class="nav-link" aria-current="page" href="{{ path('app_produit_homme') }}">Homme</a>
 					</li>
 					<li>
 						<a class="nav-link" aria-current="page" href="{{ path('app_produit_femme') }}">Femme</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" aria-current="page" href="{{ path('app_home') }}">Accueil</a>
-					</li>
+						<li>
+							<a class="nav-link" aria-current="page" href"#">Essai Virtuel</a>
+						</li>
 
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -94,14 +101,17 @@
 		{% else %}
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+						<a class="nav-link" aria-current="page" href="{{ path('app_home') }}">Accueil</a>
+					</li>
 					<li>
-						<a class="nav-link" aria-current="page" href="#">Homme</a>
+						<a class="nav-link" aria-current="page" href="{{ path('app_produit_homme') }}">Homme</a>
 					</li>
 					<li>
 						<a class="nav-link" aria-current="page" href="{{ path('app_produit_femme') }}">Femme</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" aria-current="page" href="{{ path('app_home') }}">Accueil</a>
+					<li>
+							<a class="nav-link" aria-current="page" href"#">Essai Virtuel</a>
 					</li>
 
 					<li class="nav-item dropdown">
