--- a/Templates/security/login.html.twig
+++ b/Templates/security/login.html.twig
@@ -25,10 +25,10 @@
            value="{{ csrf_token('authenticate') }}"
     >
 
-    <button class="btn btn-lg btn-dark text-light btn-hover" type="submit">
+    <button class="btn btn-lg btn-dark text-light btn-hover mt-4" type="submit">
         Se connecter
     </button>
-    <a class="btn btn-lg btn-dark text-light btn-hover" href="{{ path('app_register') }}">S'inscrire</a>
+    <a class="btn btn-lg btn-dark text-light btn-hover mt-4" href="{{ path('app_register') }}">S'inscrire</a>
     <a href="{{ path('app_forgot_password_request') }}"> Mot de passe oublié
     <a/>
 </form>
