--- a/assets/styles/footer.css
+++ b/assets/styles/footer.css
@@ -1,15 +1,15 @@
 footer {
-    background-color: #343a40;
-    color: #ffffff;
-    padding: 10px 0;
-    position:fixed;
+    background-color: #bec5cd;
+    color: black;
+    padding: 20px 0;
     width: 100%;
-    bottom: 0;
+    
 }
 
 .social a {
-    color: #ffffff;
+    color: black;
     margin-right: 15px;
+    text-decoration: none;
 }
 
 .social i {
@@ -27,7 +27,7 @@ ul.footer-links li {
 }
 
 ul.footer-links li a {
-    color: #ffffff;
+    color: black;
     text-decoration: none;
 }
 
