--- a/assets/styles/mode.css
+++ b/assets/styles/mode.css
@@ -7,6 +7,7 @@ body,
 *:before,
 *:after {
   box-sizing: border-box;
+
 }
 body {
   position: relative;
@@ -14,10 +15,14 @@ body {
   font-size: 1.2em;
   font-family: 'Roboto', sans-serif; 
   width: 100%;
-  height: 100vh;
 }
+main {
+  margin-bottom: 50px;
+}
+  
 h1{
   font-family: 'Montserrat', sans-serif !important;
+  margin: 50px 0;
 }
 .wrapper {
   display: flex;
