--- a/Templates/produits/femme.html.twig
+++ b/Templates/produits/femme.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-    {% include "./components/navigationFemme.html.twig" %} 
+	{% include "./components/navigationFemme.html.twig" %}
 	{% for flashMessage in app.flashes('error') %}
 		<div class='alert alert-danger'>
 			{{ flashMessage }}
@@ -12,21 +12,20 @@
 
 	{% endfor %}
 	<div class="container">
-		<h1 class="mt-3 mb-4">{{ nomCategorie }} femme</h1>
+		<h1 class="mt-3 mb-4">{{ nomCategorie }}
+			femme</h1>
 		<div class="row">
 			{% for produit in produitFemme %}
 
 				<div class="col-md-4 d-flex align-items-stretch">
 					<div class="card mb-4">
+						<div class="image-container">
 						<img src="{{ asset(produit.image) }}" alt="{{ produit.nom }}" class="card-img-top">
+						</div>
 						<div class="card-body">
 							<h5 class="card-title">{{ produit.nom }}</h5>
-							{# <select name="taille"  required>
-																																			                        <option value="" disabled selected hidden>Choix Tailles</option>
-																																			                        {% for taille in produit.tailles %}
-																																			                        <option id="taille" value="{{ taille.mesures }}">{{ taille.mesures }}</option>
-																																			                        {% endfor %}
-																																			                        </select> #}
+							<p class="card-text">{{ produit.couleur }}</p>
+							<p class="card-text">{{ produit.description }}</p>
 							<form method="post" action="{{ path('app_ajout_panier', {'produitId': produit.id }) }}">
 								<select name="taille" required>
 									<option value="" disabled selected hidden>Choix Tailles</option>
@@ -36,8 +35,6 @@
 								</select>
 								<button type="submit" class="btn btn-dark light btn-hover btn-active">Ajouter au panier</button>
 							</form>
-							<p class="card-text">{{ produit.couleur }}</p>
-							<p class="card-text">{{ produit.description }}</p>
 
 						</div>
 						<div class="card-footer card-footer-align">
