--- a/Templates/components/navigation.html.twig
+++ b/Templates/components/navigation.html.twig
@@ -11,7 +11,7 @@
 
 			{% if is_granted('ROLE_ADMIN') %}
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-underline">
 						<li class="nav-item">
 							<a class="nav-link" aria-current="page" href="{{ path('app_home') }}">Accueil</a>
 						</li>
@@ -58,7 +58,7 @@
 
 		{% elseif is_granted('ROLE_USER') %}
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-underline">
 					<li class="nav-item">
 						<a class="nav-link" aria-current="page" href="{{ path('app_home') }}">Accueil</a>
 					</li>
@@ -100,7 +100,7 @@
 			</div>
 		{% else %}
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-underline">
 					<li class="nav-item">
 						<a class="nav-link" aria-current="page" href="{{ path('app_home') }}">Accueil</a>
 					</li>
