--- a/Templates/produits/detailsProduits.html.twig
+++ b/Templates/produits/detailsProduits.html.twig
@@ -4,56 +4,33 @@
 {% endblock %}
 
 {% block body %}
-	<div class="container">
-		<h1 class="mt-3 mb-4">Vêtements</h1>
+	<div class="container detail-produit">
+		<h1 class="mt-3 mb-4">{{ produit.nom }}</h1>
 		<div class="row">
-
-
 			<div class="col-md-4">
-				<div class="card mb-4">
-					<img src="{{ asset(produit.image) }}" alt="{{ produit.nom }}" class="card-img-top">
-					<div class="card-body">
-						<h5 class="card-title">{{ produit.nom }}</h5>
-						 		<form method="post" action="{{ path('app_ajout_panier', {'produitId': produit.id }) }}">
-            <select name="taille" required>
-                <option value="" disabled selected hidden>Choix Tailles</option>
-                {% for taille in produit.tailles %}
-                    <option value="{{ taille.mesures }}">{{ taille.mesures }}</option>
-                {% endfor %}
-            </select>
-            <button type="submit" class="btn btn-dark">Ajouter au panier</button>
-        </form>
-						<p class="card-text">{{ produit.couleur }}</p>
-						<p class="card-text">{{ produit.description }}</p>
-						<div class="d-flex justify-content-between align-item-center">
-							
-							<div class="card-footer card-footer-align">
-
-							<div class="d-flex justify-content-between align-item-center">
-								<a href="{{ path('app_avis_produits',{'id': produit.id }) }}" class="btn btn-dark btn-hover">Voir plus</a>
-								<span>{{ produit.prix }}
-									€</span>
-								{% if produit.stock > 1 %}
-									<p>disponible</p>
-								{% else %}
-									<p>Pas disponible</p>
-								{% endif %}
-							</div>
-						</div>
-						</div>
-
-					</div>
-				</div>
+				<img src="{{ asset(produit.image) }}" alt="{{ produit.nom }}">
 			</div>
+			<div class="col-md-8">
 
-
-		</div>
-	</div>
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-5 col-md-6 col-12 pb-4">
+				<p>{{ produit.couleur }}</p>
+				<p>{{ produit.description }}</p>
+				<p>{{ produit.prix }}€</p>
+				{% if produit.stock > 1 %}
+					<p>disponible</p>
+				{% else %}
+					<p>Pas disponible</p>
+				{% endif %}
+				<form method="post" action="{{ path('app_ajout_panier', {'produitId': produit.id }) }}">
+					<select name="taille" required>
+						<option value="" disabled selected hidden>Choix Tailles</option>
+						{% for taille in produit.tailles %}
+							<option value="{{ taille.mesures }}">{{ taille.mesures }}</option>
+						{% endfor %}
+					</select>
+					<button type="submit" class="btn btn-dark">Ajouter au panier</button>
+				</form>
+				<h1>Commentaires</h1>
 				{% for commentaire in commentaire %}
-					<h1>Commentaire</h1>
 					<div
 						class="comment mt-4 text-justify float-left">
 
@@ -63,15 +40,11 @@
 						<p>{{ commentaire.commentaire }}</p>
 					</div>
 				{% endfor %}
+				<div class="example-wrapper">
+					{{ form_start(form) }}
+					{{ form_end(form) }}
+				</div>
 			</div>
 		</div>
-	</div>
-
-	<div class="example-wrapper">
-		<h1>Produits</h1>
-		{{ form_start(form) }}
-		{{ form_end(form) }}
-
-
 	</div>
 {% endblock %}
