--- a/Templates/registration/register.html.twig
+++ b/Templates/registration/register.html.twig
@@ -9,7 +9,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 offset-sm-3">
-    <h1>Register</h1>
+    <h1>S'inscrire</h1>
 
     {{ form_errors(registrationForm) }}
 
