--- a/Templates/security/login.html.twig
+++ b/Templates/security/login.html.twig
@@ -1,35 +1,45 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Se connecter{% endblock %}
+{% block title %}Se connecter
+{% endblock %}
 
 {% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+	<div class="container">
+		<div class="row justify-content-center">
+			<div class="col-md-6">
+				<form method="post">
+					{% if error %}
+						<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+					{% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            Vous êtes connecté en tant que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Se déconnecter</a>
-        </div>
-    {% endif %}
+					{% if app.user %}
+						<div class="mb-3">
+							Vous êtes connecté en tant que
+							{{ app.user.userIdentifier }},
+							<a href="{{ path('app_logout') }}">Se déconnecter</a>
+						</div>
+					{% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Veuillez vous connecter
-    </h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Mot de passe</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+					<h1 class="h3 mb-3 font-weight-normal">Veuillez vous connecter
+					</h1>
+					<label for="inputEmail">Email</label>
+					<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+					<label for="inputPassword">Mot de passe</label>
+					<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+					<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-    <button class="btn btn-lg btn-dark text-light btn-hover mt-4" type="submit">
-        Se connecter
-    </button>
-    <a class="btn btn-lg btn-dark text-light btn-hover mt-4" href="{{ path('app_register') }}">S'inscrire</a>
-    <a href="{{ path('app_forgot_password_request') }}"> Mot de passe oublié
-    <a/>
-</form>
-{% endblock %}
+					<button class="btn btn-lg btn-dark text-light btn-hover mt-4" type="submit">
+						Se connecter
+					</button>
+					<a class="btn btn-lg btn-dark text-light btn-hover mt-4" href="{{ path('app_register') }}">S'inscrire</a>
+					<a href="{{ path('app_forgot_password_request') }}">
+						Mot de passe oublié
+						<a/>
+					</form>
+				</div>
+			</div>
+
+
+		</div>
+	{% endblock %}
