--- a/assets/styles/mode.css
+++ b/assets/styles/mode.css
@@ -92,3 +92,19 @@ h1{
   tranform: translateX(-50%);
   font-weight: bold;
 }
+
+.button-admin-container {
+  display: flex;
+  padding: 8px 16px;
+  justify-content: space-between;
+}
+
+.form-button {
+  display: flex;
+  justify-content: space-between;
+}
+
+.card-body-form {
+  height: 80px;
+
+}
